for some stupid reason IE 11/10 refuse to abide by my 17px to the right on the navbar.  probly something to do with overflows or something but for now it's fixed (for IE - chrome doesn't render properly now).

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -98,6 +98,10 @@ body {
 	border-bottom-color: #F62459;
 }
 
+#ph-title.ph-cm:focus {
+	color: #000;
+}
+
 #ph-contentWrap {
 	opacity: 1;
 	position: relative;
